Step 4: Added a feature having database persistence

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,12 @@ services:
       - 8080:8080
       - 35729:35729
       - 5005:5005
+    depends_on:
+      - db
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: mydbpassword
+    volumes:
+      - ./.postgresql_data:/var/lib/postgresql/data
