--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.devtools.remote.secret=KALSDJFLNVMSDJFGIERJGLESALRGJLAJFGLASDFJLASDFM
+
+spring.datasource.url= jdbc:postgresql://db:5432/postgres
+spring.datasource.username= postgres
+spring.datasource.password= mydbpassword
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
