--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,8 @@ services:
     environment:
       POSTGRES_PASSWORD: mydbpassword
     volumes:
-      - ./.postgresql_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
+    external: true
