Revert "Fix PG volume mount on Windows"
This reverts commit a840e57a8e0e818fe7eac716b90217d11cf3cbe4.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,4 @@ services:
     environment:
       POSTGRES_PASSWORD: mydbpassword
     volumes:
-      - pgdata:/var/lib/postgresql/data
-
-volumes:
-  pgdata:
-    external: true
+      - ./.postgresql_data:/var/lib/postgresql/data
