--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.devtools.remote.secret=KALSDJFLNVMSDJFGIERJGLESALRGJLAJFGLASDFJLASDFM
 
-spring.datasource.url= jdbc:postgresql://db:5432/postgres
+spring.datasource.url= jdbc:postgresql://${PG_HOST}:5432/postgres
 spring.datasource.username= postgres
-spring.datasource.password= mydbpassword
+spring.datasource.password= ${PG_PASS}
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
